--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,9 @@
+@import 'vuetify/styles';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
